# bumper-dev

./: .codecov.yml  .coveragerc  .dockerignore  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .prettierrc.yml  .yamllint  CHANGELOG.md  CODE_OF_CONDUCT.md  Dockerfile  README.md  SECURITY.md  bandit.yml  docker-compose-mitm.yaml  docker-compose.yaml  mkdocs.yml  pylintrc  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.cfg
.github/: PULL_REQUEST_TEMPLATE.md  release-drafter.yml
.github/DISCUSSION_TEMPLATE/: feature-requests.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: ci.yml  codeql-analysis.yml  docker-release.yml  mkdocs-release.yml  release-drafter.yml
bumper/: __init__.py  __main__.py
bumper/db/: __init__.py  base.py  bots.py  clean_logs.py  clients.py  db.py  helpers.py  tokens.py  users.py
bumper/mqtt/: handle_atr.py  helper_bot.py  proxy.py  server.py
bumper/utils/: db.py  dns.py  log_helper.py  settings.py  utils.py  utils_area_code_mapping.json  utils_implemented_apis.json
bumper/web/: auth_util.py  middlewares.py  models.py  response_utils.py  server.py  single_paths.py
bumper/web/images/: __init__.py
bumper/web/plugins/: __init__.py
bumper/web/plugins/api/: appsvr.py  basis.py  content.py  dim.py  ecms.py  homed.py  iot.py  lg.py  microservice_recomend.py  neng.py  new_perm.py  ota.py  photo.py  rapp.py  sds.py  users.py
bumper/web/plugins/api/pim/: __init__.py  codePushConfig.json  configGroupsResponse.json  configNetAllResponse.json  consumable.py  dictionary.py  eventdetail.py  faqproblem.py  file.py  product.py  productIotMap.json  voice.py
bumper/web/plugins/app/: __init__.py  dln.py
bumper/web/plugins/app_adv/: __init__.py
bumper/web/plugins/app_adv/pim/: __init__.py  offline.py
bumper/web/plugins/pim/: __init__.py  base_station_guide_newton_curi.py
bumper/web/plugins/public/: __init__.py  image.py
bumper/web/plugins/upload/: global.py  global_upload.py
bumper/web/plugins/v1/: global_auth.py
bumper/web/plugins/v1/private/: ad.py  agreement.py  campaign.py  common.py  help.py  intl.py  member.py  message.py  osmall.py  shop.py  user.py  user_setting.py
bumper/web/plugins/v2/private/: common.py  member.py  message.py  user.py  user_setting.py
bumper/web/plugins/v3/: __init__.py
bumper/web/plugins/v3/private/: common.py
bumper/web/static/css/: custom.css
bumper/web/static/fonts/: inter.css
bumper/web/static/js/: main.js
bumper/web/templates/: home.jinja2
bumper/web/templates/partials/: bots.jinja2  clients.jinja2  server_status.jinja2  users.jinja2
bumper/xmpp/: __init__.py  xmpp.py
configs/: mitm-mqtt.py  mitm.py  nginx.conf
configs/nginx/: nginx.conf
docs/: CmdLine.md  Create_Certs.md  DNS_Setup.md  Docker.md  Env_Var.md  Sniffing.md  Use_With_Sucks.md  index.md  origins.md
docs/configs/: CmdLine.md  Create_Certs.md  DNS_Setup.md  Docker.md  Use_With_App.md
docs/configuration/: environment.md
docs/dev/: Develop.md  Ubuntu_Android_Sniffing.md
docs/development/: dev-guide.md
docs/getting_started/: certificates.md  dns.md
docs/images/: BumperDiagram.drawio
docs/infos/: Env_Var.md
docs/internals/: architecture.md  certificate-unpinning.md  sniffing.md
docs/reverse/: Certificate_Unpinning.md  Sniffing.md
docs/usage/: cli.md  docker.md  mobile_app.md
scripts/: clean-domains.py  create-cert.sh  create-unpined-app.sh  create_cert.sh  requirements-update.sh  update-requirements.sh  update-statics.sh
tests/: __init__.py  conftest.py  passwd  passwd_bad  test_db.py  test_init.py  test_init_main.py  test_init_start.py  test_main.py  test_mqttserver.py  test_util.py  test_xmppserver.py  test_z_problem.py
tests/_test_files/certs/: bumper.crt
tests/mqtt/: mqtt_util.py  test_handle_atr.py  test_helper_bot.py  test_mqttserver.py  test_server.py
tests/test_certs/: bumper.key  ca.crt  ca.key
tests/utils/: test_db.py  test_db_bot.py  test_db_clean_logs.py  test_db_client.py  test_db_oauth.py  test_db_user.py  test_log_helper.py  test_util.py
tests/web/: test_models.py  test_server.py
tests/web/plugins/api/: test_appsvr.py  test_dim.py  test_iot.py  test_lg.py  test_neng.py  test_user.py
tests/web/plugins/api/pim/: test_file.py  test_pim.py  test_product.py  test_voice.py
tests/web/plugins/v1/: test_global.py
tests/web/plugins/v1/private/: test_ad.py  test_campaign.py  test_common.py  test_commons.py  test_login.py  test_message.py  test_shop.py  test_user.py
tests/xmpp/: test_xmppserver.py
